Java 16 is here, time to experiment